@@ -1,3 +1,11 @@
+2003-05-08  Per Bothner  <per@bothner.com>
+
+	* KawaServlet.java (doGet):  Unwrap WrappedException.
+
+	* KawaPageServlet.java (getProcedure):  Set file name of InPort.
+
+	* KawaPageServlet.java (getProcedure):  Catch SyntaxException.
+
 2003-03-02  Per Bothner  <per@bothner.com>
 
 	* KawaPageServlet.java (getProcedure):  Use getOutputStream instead
